Fix column margins on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,16 +240,15 @@ main {
 .main-flex-container {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     margin: 0;
     padding: 0;
 }
 
 .main-section-style {
     margin-top: 1rem;
-    margin-left: 0;
-    margin-right: 0;
-    flex: 0 0 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     background-color: #ffeaea9c;
     border-radius: 1rem;
     color: #890400;
